--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://pry-himanshu.github.io/Numinix",
+  "main": "main.cjs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,7 +14,14 @@
     "dev:full": "concurrently \"npm run groq-proxy\" \"npm run dev\"",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "start": "npm run dev"
+    "start": "npm run dev",
+    "electron": "electron ."
+  },
+  "build": {
+    "appId": "com.numinix.app",
+    "win": {
+      "target": "nsis"
+    }
   },
   "dependencies": {
     "@capacitor/android": "^7.4.3",
@@ -44,6 +52,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
+    "electron": "^38.1.1",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
