--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "start": "npm run dev",
+    "start:all": "concurrently \"npm run dev\" \"node groqProxy.js\"",
     "electron": "electron ."
   },
   "build": {
@@ -29,7 +30,6 @@
     "@capacitor/core": "^7.4.3",
     "@supabase/supabase-js": "^2.56.1",
     "@types/react-router-dom": "^5.3.3",
-    "concurrently": "^9.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
@@ -52,6 +52,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
+    "concurrently": "^9.2.1",
     "electron": "^38.1.1",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
